Add link to Easy Guacamole recipe page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/roti-canai.html">Roti Canai</a>
+        <ul>
+            <li><a href="./recipes/roti-canai.html">Roti Canai</a></li>
+            <li><a href="./recipes/easy-guacamole.html">Easy Guacamole</a></li>
+        </ul>
+        
     </body>
 </html>
