Format code to be less than 75 chars, add credits link

--- a/recipes/roti-canai.html
+++ b/recipes/roti-canai.html
@@ -9,10 +9,12 @@
         <h1>Malaysian Flatbread (Roti Canai) with Curried Lentil Dip</h1>
         <img 
             src="./images/roti-canai-and-lentil.webp" 
-            alt="Malaysian Roti Canai and a cup of curried lentil dip on a rectangular plate.">
+            alt="Malaysian Roti Canai and a cup of curried lentil dip on a 
+            rectangular plate.">
 
         <h2>Description</h2>
-        <p>Roti Canai is a staple food in Malaysia commonly eaten during breakfast.</p>
+        <p>Roti Canai is a staple food in Malaysia commonly eaten during 
+            breakfast.</p>
 
         <h2>Ingredients</h2>
             <h3>For the Roti Canai:</h3>
@@ -47,17 +49,54 @@
             </ul>
         <h2>Steps</h2>
         <ol>
-            <li>Combine bread flour, sugar, kosher salt, egg, melted butter, and water for roti canai in a mixing bowl. Mix with your hands until a shaggy dough forms. Transfer to a work surface and knead until a smooth, elastic dough forms, about 7 minutes.</li>
-            <li>Divide dough into 8 equal pieces and form each one into a ball. Coat each ball with vegetable oil, transfer to a plate, and cover with plastic wrap. Refrigerate for 8 hours, to overnight.</li>
-            <li>Melt butter for dip in a saucepan over medium-high heat. Add onion, ginger, garlic, kosher salt, curry powder, paprika, cumin, black pepper, and cayenne pepper; stir together and saute until onion has softened and spices are fragrant, 3 to 4 minutes. Stir in tomato paste and cook until it starts to toast and caramelize on the bottom of the pan, about 3 minutes.</li>
-            <li>Stir in cold water and coconut milk. Add lentils; stir and bring to a simmer. Reduce heat to medium-low and simmer, stirring occasionally, until tender, about 40 minutes. Taste and adjust seasonings. Reduce heat to low and keep warm while you prepare the roti canai.</li>
-            <li>Place 1/4 cup melted butter in a bowl. Transfer rested dough balls onto a lightly oiled work surface. Flatten each ball slightly and rub a little melted butter on top. Cover dough with plastic wrap and let it warm up slightly, about 10 minutes.</li>
-            <li>Press on top of the plastic wrap to flatten warmed dough. Remove plastic wrap and add a bit more butter. Stretch each piece from the center out to get it as thin as possible (until almost see-through), adding more butter as needed. Don't worry if there are a few small tears.</li>
-            <li>Sprinkle on more melted butter, then pull two sides in towards the center until touching and overlapping slightly. Pull the other two edges in the same way to form a square. Cover with plastic wrap and flatten roti canai one more time.</li>
-            <li>Add some melted butter to a skillet set over medium or medium-low heat. Add roti canai and cook until browned, flaky, and crispy on the outside and fully cooked through on the inside, 3 to 4 minutes per side.</li>
-            <li>Remove from the skillet and smush it with your hands to fluff it up and separate the layers of dough. Repeat to cook remaining roti canai.</li>
-            <li>Sprinkle the curried red lentil dip with cilantro and sliced serrano peppers and serve alongside the roti canai.</li>
-
+            <li>Combine bread flour, sugar, kosher salt, egg, melted 
+                butter, and water for roti canai in a mixing bowl. Mix 
+                with your hands until a shaggy dough forms. Transfer to a 
+                work surface and knead until a smooth, elastic dough 
+                forms, about 7 minutes.</li>
+            <li>Divide dough into 8 equal pieces and form each one into a 
+                ball. Coat each ball with vegetable oil, transfer to a 
+                plate, and cover with plastic wrap. Refrigerate for 8 
+                hours, to overnight.</li>
+            <li>Melt butter for dip in a saucepan over medium-high heat. 
+                Add onion, ginger, garlic, kosher salt, curry powder, 
+                paprika, cumin, black pepper, and cayenne pepper; stir 
+                together and saute until onion has softened and spices are 
+                fragrant, 3 to 4 minutes. Stir in tomato paste and cook 
+                until it starts to toast and caramelize on the bottom of 
+                the pan, about 3 minutes.</li>
+            <li>Stir in cold water and coconut milk. Add lentils; stir and 
+                bring to a simmer. Reduce heat to medium-low and simmer, 
+                stirring occasionally, until tender, about 40 minutes. 
+                Taste and adjust seasonings. Reduce heat to low and keep 
+                warm while you prepare the roti canai.</li>
+            <li>Place 1/4 cup melted butter in a bowl. Transfer rested 
+                dough balls onto a lightly oiled work surface. Flatten 
+                each ball slightly and rub a little melted butter on top. 
+                Cover dough with plastic wrap and let it warm up slightly, 
+                about 10 minutes.</li>
+            <li>Press on top of the plastic wrap to flatten warmed dough. 
+                Remove plastic wrap and add a bit more butter. Stretch 
+                each piece from the center out to get it as thin as 
+                possible (until almost see-through), adding more butter as 
+                needed. Don't worry if there are a few small tears.</li>
+            <li>Sprinkle on more melted butter, then pull two sides in 
+                towards the center until touching and overlapping 
+                slightly. Pull the other two edges in the same way to form 
+                a square. Cover with plastic wrap and flatten roti canai 
+                one more time.</li>
+            <li>Add some melted butter to a skillet set over medium or 
+                medium-low heat. Add roti canai and cook until browned, 
+                flaky, and crispy on the outside and fully cooked through 
+                on the inside, 3 to 4 minutes per side.</li>
+            <li>Remove from the skillet and smush it with your hands to 
+                fluff it up and separate the layers of dough. Repeat to 
+                cook remaining roti canai.</li>
+            <li>Sprinkle the curried red lentil dip with cilantro and 
+                sliced serrano peppers and serve alongside the 
+                roti canai.</li>
         </ol>
+        <h6>Credits to <a href="https://www.allrecipes.com/recipe/285148/malaysian-flatbread-roti-canai-with-curried-lentil-dip/">
+            allrecipes.com</a></h6>
     </body>
 </html>
