Fix description typo

--- a/recipes/easy-guacamole.html
+++ b/recipes/easy-guacamole.html
@@ -9,7 +9,7 @@
         <h1>Easy Guacamole Recipe</h1>
         <img src="https://www.allrecipes.com/thmb/C207d6NtkOA9XrvjB3Q4bkhbgy8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5369662-f97d20d3db444be49227420ee0c40b77.jpg" 
             alt="Guacamole in a small green bowl with chips on the side.">
-        <h2>Descrition</h2>
+        <h2>Description</h2>
         <p>Guacamole is an easy way to get some healthy fat into your diet!</p>
 
         <h2>Ingredients</h2>
