--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
     <body>
         <h1>Odin Recipes</h1>
         <ul>
-            <li><a href="./recipes/roti-canai.html">Roti Canai</a></li>
+            <li>
+                <a href="./recipes/roti-canai.html">Roti Canai</a>
+            </li>
             <li>
                 <a href="./recipes/easy-guacamole.html">Easy Guacamole</a>
             </li>
-            <li><a href="./recipes/honey-walnut-shrimp.html">Honey Walnut 
-                Shrimp</a></li>
+            <li>
+                <a href="./recipes/honey-walnut-shrimp.html">Honey Walnut 
+                Shrimp</a>
+            </li>
         </ul>
         
     </body>
