Change multiline formatting

--- a/recipes/honey-walnut-shrimp.html
+++ b/recipes/honey-walnut-shrimp.html
@@ -8,7 +8,8 @@
         <h1>Honey Walnuit Shrimp Recipe</h1>
         <img src="https://www.allrecipes.com/thmb/7U4SocHuwVis_-y29vbIsqMUZqM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/270515-42a68d5e9b1f4614a159d3dfbc7882be.jpg"
             alt="Honey Walnut Shrimp served on top of a bowl of rice,
-            topped with chopped scallions.">
+            topped with chopped scallions."
+        >
 
         <h2>Description</h2>
         <p>Can't resist this sweet, savory, crunchy seafood!</p>
@@ -29,24 +30,37 @@
 
         <h2>Steps</h2>
         <ol>
-            <li>Stir together water and sugar in a small saucepan over 
+            <li>
+                Stir together water and sugar in a small saucepan over 
                 high heat. Bring to a boil and add walnuts. Boil for 2 
                 minutes, then drain and place walnuts on a cookie sheet 
-                to dry.</li>
-            <li>Whip egg whites in a medium bowl until foamy. Stir in
-                mochiko until it has a pasty consistency.</li>
-            <li>Heat oil in a heavy deep skillet over medium-high 
-                heat.</li>
-            <li>Dip shrimp in mochiko batter, then fry in batches in hot 
+                to dry.
+            </li>
+            <li>
+                Whip egg whites in a medium bowl until foamy. Stir in
+                mochiko until it has a pasty consistency.
+            </li>
+            <li>
+                Heat oil in a heavy deep skillet over medium-high 
+                heat.
+            </li>
+            <li>
+                Dip shrimp in mochiko batter, then fry in batches in hot 
                 oil until golden brown, about 5 minutes. Remove with a 
-                slotted spoon and drain on paper towels.</li>
-            <li>Stir together mayonnaise, honey, and sweetened condensed 
+                slotted spoon and drain on paper towels.
+            </li>
+            <li>
+                Stir together mayonnaise, honey, and sweetened condensed 
                 milk in a medium serving bowl. Add fried shrimp and toss 
                 to coat with sauce. Sprinkle candied walnuts on top and 
-                serve.</li>
+                serve.
+            </li>
         </ol>
-        
-        <h6>Credits to <a href="https://www.allrecipes.com/recipe/93234/honey-walnut-shrimp/">
-            allrecipes.com</a></h6>
+
+        <h6>
+            Credits to 
+            <a href="https://www.allrecipes.com/recipe/93234/honey-walnut-shrimp/">
+            allrecipes.com</a>
+        </h6>
     </body>
 </html>
