--- a/recipes/easy-guacamole.html
+++ b/recipes/easy-guacamole.html
@@ -5,12 +5,16 @@
         <title>Easy Guacamole Recipe</title>
     </head>
     <body>
-        <!-- Credits to https://www.allrecipes.com/recipe/14064/easy-guacamole/ -->
         <h1>Easy Guacamole Recipe</h1>
         <img src="https://www.allrecipes.com/thmb/C207d6NtkOA9XrvjB3Q4bkhbgy8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5369662-f97d20d3db444be49227420ee0c40b77.jpg" 
-            alt="Guacamole in a small green bowl with chips on the side.">
+            alt="Guacamole in a small green bowl with chips on the side."
+        >
+
         <h2>Description</h2>
-        <p>Guacamole is an easy way to get some healthy fat into your diet!</p>
+        <p>
+            Guacamole is an easy way to get some healthy fat into your 
+            diet!
+        </p>
 
         <h2>Ingredients</h2>
         <ul>
@@ -24,12 +28,20 @@
 
         <h2>Steps</h2>
         <ol>
-            <li>Mash avocado in a medium serving bowl. Stir in onion, tomato, 
-                and garlic. Season with lime juice, salt, and pepper.</li>
-            <li>Cover and chill guacamole for 30 minutes to allow flavors to 
-                blend.</li>
+            <li>
+                Mash avocado in a medium serving bowl. Stir in onion, tomato, 
+                and garlic. Season with lime juice, salt, and pepper.
+            </li>
+            <li>
+                Cover and chill guacamole for 30 minutes to allow flavors to 
+                blend.
+            </li>
         </ol>
-        <h6>Credits to <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/">
-        allrecipes.com</a></h6>
+
+        <h6>
+            Credits to 
+            <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/">
+            allrecipes.com</a>
+        </h6>
     </body>
 </html>
