Link recipe pages to styles.css

--- a/recipes/honey-walnut-shrimp.html
+++ b/recipes/honey-walnut-shrimp.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Honey Walnut Shrimp Recipe</title>
+        <link rel="stylesheet" href="../styles.css">
     </head>
     <body>
         <h1>Honey Walnuit Shrimp Recipe</h1>
