--- a/recipes/easy-guacamole.html
+++ b/recipes/easy-guacamole.html
@@ -1,47 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <title>Easy Guacamole Recipe</title>
-    </head>
-    <body>
-        <h1>Easy Guacamole Recipe</h1>
-        <img src="https://www.allrecipes.com/thmb/C207d6NtkOA9XrvjB3Q4bkhbgy8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5369662-f97d20d3db444be49227420ee0c40b77.jpg" 
-            alt="Guacamole in a small green bowl with chips on the side."
-        >
+  <head>
+    <meta charset="UTF-8" />
+    <title>Easy Guacamole Recipe</title>
+    <link rel="stylesheet" href="../styles.css">
+  </head>
+  <body>
+    <h1>Easy Guacamole Recipe</h1>
+    <img
+      src="https://www.allrecipes.com/thmb/C207d6NtkOA9XrvjB3Q4bkhbgy8=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/5369662-f97d20d3db444be49227420ee0c40b77.jpg"
+      alt="Guacamole in a small green bowl with chips on the side."
+    />
 
-        <h2>Description</h2>
-        <p>
-            Guacamole is an easy way to get some healthy fat into your 
-            diet!
-        </p>
+    <h2>Description</h2>
+    <p>Guacamole is an easy way to get some healthy fat into your diet!</p>
 
-        <h2>Ingredients</h2>
-        <ul>
-            <li>2 ripe avocados, peeled and pitted</li>
-            <li>1 small onion, finely chopped</li>
-            <li>1 ripe tomato, chopped</li>
-            <li>1 clove garlic, minced</li>
-            <li>1 lime, juiced</li>
-            <li>salt and pepper to taste</li>
-        </ul>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>2 ripe avocados, peeled and pitted</li>
+      <li>1 small onion, finely chopped</li>
+      <li>1 ripe tomato, chopped</li>
+      <li>1 clove garlic, minced</li>
+      <li>1 lime, juiced</li>
+      <li>salt and pepper to taste</li>
+    </ul>
 
-        <h2>Steps</h2>
-        <ol>
-            <li>
-                Mash avocado in a medium serving bowl. Stir in onion, tomato, 
-                and garlic. Season with lime juice, salt, and pepper.
-            </li>
-            <li>
-                Cover and chill guacamole for 30 minutes to allow flavors to 
-                blend.
-            </li>
-        </ol>
+    <h2>Steps</h2>
+    <ol>
+      <li>
+        Mash avocado in a medium serving bowl. Stir in onion, tomato, and
+        garlic. Season with lime juice, salt, and pepper.
+      </li>
+      <li>
+        Cover and chill guacamole for 30 minutes to allow flavors to blend.
+      </li>
+    </ol>
 
-        <h6>
-            Credits to 
-            <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/">
-            allrecipes.com</a>
-        </h6>
-    </body>
+    <h6>
+      Credits to
+      <a href="https://www.allrecipes.com/recipe/14064/easy-guacamole/">
+        allrecipes.com</a
+      >
+    </h6>
+  </body>
 </html>
